Corrigido um pequeno erro de escrita

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <h1 class="title">Dheison Gomes</h1>
     <p class="about">
       Olá, me chamo Dheison, moro em um interior pequeno no sul do Piauí,
-      sou estudante de programação à alguns anos, meu foco no desenvolvimento
+      sou estudante de programação há alguns anos, meu foco no desenvolvimento
       de software é na criação de aplicações backend como CLIs e APIs, atualmente
       estou estudando Go e React Native, já possuo conhecimento em Python,
       JavaScript e Bash, sou usuário de Linux e estou á procura de trabalhos como
-      freelancer.
+      free lancer.
     </p>
     <div class="contact">
       <a class="social" href="http://github.com/dheisom">
