Atualizando algumas coisinhas no website

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dheison's Homepage</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link async rel="stylesheet" href="./style.css" />
+  <script defer src="./script.js"></script>
+  <script defer type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script defer nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
-  <main class="mainContent">
+  <main>
     <img class="photo" src="img/photo.jpg" alt="Uma foto minha">
     <h1 class="title">Dheison Gomes</h1>
     <p class="about">
@@ -21,23 +24,7 @@
       JavaScript e Bash, sou usuário de Linux e estou á procura de trabalhos como
       free lancer.
     </p>
-    <div class="contact">
-      <a class="social" href="http://github.com/dheisom">
-        <img src="img/icons/github.png" alt="GitHub">
-      </a>
-      <a class="social" href="http://instagram.com/dheisomgomes">
-        <img src="img/icons/instagram.png" alt="Instagram">
-      </a>
-      <a class="social" href="http://t.me/dheisomgomes">
-        <img src="img/icons/telegram.png" alt="Telegram">
-      </a>
-      <a class="social" href="http://www.tabnews.com.br/dheisom">
-        <img src="img/icons/tabnews.png" alt="Tabnews">
-      </a>
-      <a class="social" href="mailto:dheisomgomes0@gmail.com">
-        <img src="img/icons/email.png" alt="Email">
-      </a>
-    </div>
+    <div class="contact"></div>
   </main>
 </body>
 
